# botb2

./: .gitignore  .gitmodules  CMakeLists.txt  botb2.h  main.cpp
Common/: Utils.h
Processor/: BarAggregator.cpp  BarAggregator.h  ITickable.h  TickProcessingStrategy.h  Tickable.cpp  Tickable.h  Ticker.cpp  Ticker.h
Processor/TickProcessingStrategies/: PriceChangeBasedStrategy.cpp  PriceChangeBasedStrategy.h  TickBasedStrategy.cpp  TickBasedStrategy.h  TimeBasedStrategy.cpp  TimeBasedStrategy.h
Types/: BarData.h  Interval.h  TickData.h  TimeValue.h
tests/: BTCBUSD-trades-2.csv  BTCBUSD-trades-372.csv  BTCUSDT-1m-100.csv  BTCUSDT-1m-20.csv  CMakeLists.txt  MockTickable.h  debugHelpers.cpp  main.cpp
